--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -20,12 +20,28 @@
       institution: Sung Kyun Kwan University
       year: 2022-Current
       description:
-        - Major in Computer Science
+        - Logic Circuits
+        - Problem Solving
+        - Introduction to Software Engineering
+        - Mobile App Programming Practice
+        - Principles of Machine Learning
+        - Production Management
+        - Introduction to Data Structures
+        - Industry-Academia Cooperation Project
+        - System Programming Practice
+        - Operating Systems
+        - Web Programming Practice
+        - System Programming
+        - JAVA Programming Practice
+        - Introduction to Databases
+        - Introduction to Computer Architecture
+        - Programming Languages
+        - Introduction to Information Security
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
+    - title: Collaborative project
       institution: Sung Kyun Kwan University and Mechasolution
       year: 2022
       description:
@@ -39,25 +55,16 @@
         - Researched many blockchain projects based on different subgenres
         - Studied and developed Solidity toy projects
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
-  type: time_table
+- title: Skills
+  type: nested_list
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: C
+    - title: Python
+      items: 
+        - FastAPI
+    - title: Solidity
+      items: 
+        - Smart Contract Development
 
 - title: Honors and Awards
   type: time_table
